# clin-rs

./: .gitignore  Cargo.toml  FIX.md  PKGBUILD  QOL.md  README.md  agent.md  clin_reddit post  deny.toml  dist-workspace.toml  features.md  progress.md
.github/: msi-release.yml
.github/workflows/: linter.yml  main.yml  security.yml  update_version.yml
arch/: PKGBUILD
scripts/: package-arch.sh  package-deb.sh  package-rpm.sh
src/: app.rs  app.rs.patch  config.rs  constants.rs  events.rs  frontmatter.rs  helpers.rs  keybinds.rs  main.rs  markdown.rs  palette.rs  sanitize.rs  storage.rs  templates.rs  ui.rs  vim.rs
src/actions/: mod.rs  ocr.rs
wix/: main.wxs
