[package]
name = "clin"
version = "0.1.0"
edition = "2024"
description = "Encrypted terminal note-taking app"
license = "MIT"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
chacha20poly1305 = "0.10"
chrono = "0.4"
crossterm = "0.28"
directories = "5.0"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-textarea = { version = "0.7", features = ["crossterm"] }
uuid = { version = "1.8", features = ["v4"] }
vim-line = "4.0"
