[package]
name = "clin-rs"
version = "0.3.3"
edition = "2024"
description = "Encrypted terminal note-taking app"
authors = ["reekta92 mdag.92988@protonmail.com"]
repository = "https://github.com/reekta92/clin-rs"
license = "GPL3"

[[bin]]
name = "clin-rs"
path = "src/main.rs"

[package.metadata.deb]
name = "clin-rs"
maintainer = "reekta <reekta@localhost>"
copyright = "2026, reekta"
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
assets = [
	["target/release/clin-rs", "usr/bin/clin-rs", "755"],
	["clin.ico", "usr/share/pixmaps/clin.ico", "644"],
]
extended-description = "clin-rs is a terminal-first encrypted note app with in-app editing and mouse support."

[package.metadata.generate-rpm]
name = "clin-rs"
assets = [
	{ source = "target/release/clin-rs", dest = "/usr/bin/clin-rs", mode = "0755" },
	{ source = "clin.ico", dest = "/usr/share/pixmaps/clin.ico", mode = "0644" },
]

[dependencies]
anyhow = "1.0"
arboard = "3.6.1"
bincode = { version = "2.0", features = ["serde"] }
chacha20poly1305 = "0.10"
chrono = "0.4"
crossterm = "0.28"
directories = "5.0"
fuzzy-matcher = "0.3.7"
image = "0.25.10"
once_cell = "1.21.4"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tempfile = "3.27.0"
toml = "0.8"
tui-textarea = { version = "0.7", features = ["crossterm"] }
uuid = { version = "1.8", features = ["v4"] }
which = "8.0.2"
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
